# blasons

./: .env.example  .gitignore  GUIDE_INSTALLATION.md  README.md  plan.md  pyproject.toml  specs.md
src/blasons/: __init__.py  __main__.py  communes.py  config.py  downloader.py  matcher.py  namer.py  petscan.py  tree.py  wikidata.py
